--- a/client/src/Contents/Slider.css
+++ b/client/src/Contents/Slider.css
@@ -17,7 +17,7 @@
     background-color: var(--bar-color);
 }
 .card_crusel{
-    margin: 23px 2.5em;
+    margin: 40px 2.5em;
     width: 296px;
 }
 @media only screen and (max-width:350px){
@@ -25,4 +25,13 @@
         margin: 23px 1.5em;
         width: 200px;
     }
+}
+.card-name{
+    padding-top: 15px;
+}
+.card-text-my{
+    margin-top: 0px;
+}
+.card-text-my p{
+    margin-top: 0px;
 }
